Cleanup bug on mobile link

--- a/e-portfolio/src/index.css
+++ b/e-portfolio/src/index.css
@@ -189,7 +189,7 @@ nav {
   border-radius: 0 0 20px 20px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   opacity: 100%;
-  z-index: 1000;
+  z-index: 3;
 }
 
 .nav__mobile--link {
